syntax = "proto3";

package m1;
option go_package = "./;m1";

service FileService{
    rpc List(ListRequest) returns (FileResponse) {};
    rpc Search(SearchRequest) returns (FileResponse) {};
}

message ListRequest{ 
}

message SearchRequest{
    string name = 1;
}

message FileResponse{
    repeated string name = 1;
}

